# branching_model

./: .gitignore  README.md  plot_cell_simulation.ipynb  pyproject.toml
branching_model/: Agent.py  Cell.py  Clone.py  Phylogeny.py  Recorder.py  Untitled.ipynb  barycentric_viz.ipynb  foo.ipynb  io.py  mutation_vaf_vis.ipynb  test_clone.py  test_inheritance.py  test_plasticity.py  test_plasticity_dash.ipynb
branching_model/.ipynb_checkpoints/: Agent-checkpoint.py  test_plasticity-checkpoint.py  test_plasticity_dash-checkpoint.ipynb
data/simulations_recordings/: clone_mutations.csv  live_cell_mutations.csv
tests/csv_files/: cell_mutations.csv  live_clone_mutations.csv  live_size.csv  mutation_size.csv  phenotype.csv  results.csv  size.csv
